# epaper-idf-component

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Kconfig.projbuild  README.md  build-web.sh  build.sh  component.mk  epaper-idf-dns.c  epaper-idf-gfx.cpp  epaper-idf-http.c  epaper-idf-httpd.c  epaper-idf-httpsd.c  epaper-idf-io.cpp  epaper-idf-ota.c  epaper-idf-spi.cpp  epaper-idf-wifi.c  epaper-idf.cpp  serve-min.sh  serve-prod.sh  serve-web-min.sh  serve-web-prod.sh  serve-web.sh  serve.sh  update-git-repos.sh
.github/: FUNDING.yml
device/: Gdew075T8.cpp
docs/: index.html  index.js
example/: http-slideshow.cpp
example/http-slideshow/: main.cpp
example/include/: http-slideshow.h
include/: epaper-idf-device.h  epaper-idf-dns.h  epaper-idf-gfx.h  epaper-idf-http.h  epaper-idf-httpd.h  epaper-idf-httpsd.h  epaper-idf-io.h  epaper-idf-log.h  epaper-idf-ota.h  epaper-idf-spi.h  epaper-idf-task.h  epaper-idf-util.h  epaper-idf-version.h  epaper-idf-wifi.h  epaper-idf.h
include/device/: Gdew075T8.h  none.h
include/example/: http-slideshow.h  none.h
include/task/: http-slideshow.h  none.h
public/: app.js  index.html  index.js  runtime-index.js
task/: http-slideshow.cpp
web/: 404.html  app.js  build.sh  index.css  index.html  index.js  package.json  serve-min.sh  serve-prod.sh  serve.sh  webpack.config.js
web/static/: app.js  index.css  index.html  index.js
